--- a/css/estilos.css
+++ b/css/estilos.css
@@ -5,21 +5,29 @@ body{
 	font-size: 16px;
 	margin: 0;
 	padding: 0;
+	background-color: currentColor;
+	font-size: 30px;
 }
 
 #cabecera{
+	display:flex;
 	background: #33A;
 	color: white;
 	margin: 0;
 	padding: 0.5em;
 	font-weight: bold;
-	box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5)
+	box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+	align-items: center;
 }
 
-#cabezera #tagline{
+#cabecera #tagline{
 	font-weight: normal;
-	font-size: 0.8em;
+	font-size: 1.5em;
 	padding: 0 0 0 1em;
+}
+
+#logo{
+	margin-right: 15px;
 }
 
 #container{
@@ -28,8 +36,12 @@ body{
 	text-align: left;
 	border: solid 1px #DDD;
 	margin: 0 auto;
+	background-color: aliceblue;
 }
 
 #container h1{
-	font-size: 20px;
+	font-size: 40px;
+}
+#container p{
+	font-size: 30px;
 }
