--- a/css/estilos.css
+++ b/css/estilos.css
@@ -24,7 +24,6 @@ body{
 
 #container{
 	width: 70%;
-	padding: 1em;
 	text-align: left;
 	border: solid 1px #DDD;
 	margin: 0 auto;
@@ -32,4 +31,16 @@ body{
 
 #container h1{
 	font-size: 20px;
+	padding: 1em;
+}
+
+#container p{
+	padding-left: 1em;
+}
+
+#footer{
+	background-color: gray;
+	text-align: center;
+	color: white;
+	height: 50px
 }
